More one-pixel gap fixing (still not completely sorted).

--- a/nkdsu/static/less/_standalone_vote.less
+++ b/nkdsu/static/less/_standalone_vote.less
@@ -18,7 +18,7 @@
     border-radius: @standalone-vote-border-radius;
 
     @media (min-width: @breakpoint) {
-      margin: .1em;
+      margin: 0 .1em;
     }
 
     > * {
